# pants_example_python

./: .env  .gitignore  .isort.cfg  README.md  pants.toml
libs/fizzbuzz/: README.md  pyproject.toml
libs/fizzbuzz/fizzbuzz/: __init__.py  runner.py
libs/fizzbuzz/tests/: test_fizzbuzz.py  test_runner.py
projects/project_a/: pyproject.toml
projects/project_a/src/: main.py
projects/project_a/src/utils/: __init__.py  str_utils.py
projects/project_b/: BUILD  pyproject.toml
projects/project_b/src/: app.py  settings.py
