[tool.poetry]
name = "project_b"
version = "0.1.0"
description = ""
authors = ["Riku Sakamoto <rikusaka03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
